fix smartphone wrap on pricing page

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -945,7 +945,7 @@ hr {
 
 @media (min-width: 1024px) {
   .pricing-grid {
-    grid-template-columns: repeat(4, 1fr);
+    grid-template-columns: repeat(3, 1fr);
     grid-template-rows: repeat(8, auto);
   }
 }
